force-app/main/default/objects/Order/fields/Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Code__c</fullName>
    <inlineHelpText>Billing Address SAP name</inlineHelpText>
    <label>Bill To Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>