force-app/main/default/objects/Order/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>