force-app/main/default/objects/Order/fields/Do_Not_Calc__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Calc__c</fullName>
    <formula>Account.Do_Not_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Calc</label>
    <type>Checkbox</type>
</CustomField>