force-app/main/default/objects/Order/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Internal SO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>