force-app/main/default/objects/Order/fields/Forma_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boleto</fullName>
                <label>Boleto Bancário</label>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Mercado Pago</fullName>
            </value>
            <value>
                <fullName>B2W</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>