force-app/main/default/objects/Order/fields/IntelipostId__c.field-meta.xml
<CustomField>
    <fullName>IntelipostId__c</fullName>
    <label>IntelipostId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>