force-app/main/default/objects/Order/fields/Legacy_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>