force-app/main/default/objects/Order/fields/Lock_Products__c.field-meta.xml
<CustomField>
    <fullName>Lock_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Products</label>
    <type>Checkbox</type>
</CustomField>