force-app/main/default/objects/Order/fields/MainUsage__c.field-meta.xml
<CustomField>
    <fullName>MainUsage__c</fullName>
    <formula>IF(  Opportunity.RecordType.DeveloperName = &apos;Samples&apos;, &apos;33&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MainUsage</label>
    <type>Text</type>
</CustomField>