force-app/main/default/objects/Order/fields/Numero_do_Empenho__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Empenho__c</fullName>
    <label>Empenho Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>