force-app/main/default/objects/Order/fields/NumeroPedidoCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedidoCliente__c</fullName>
    <label>Customer Order Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>