force-app/main/default/objects/Order/fields/NumeroProcesso__c.field-meta.xml
<CustomField>
    <fullName>NumeroProcesso__c</fullName>
    <label>Process Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>