force-app/main/default/objects/Order/fields/Order_Amount_CP__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_CP__c</fullName>
    <description>Campo criado exclusivamente para cálculos no flow OrderAverage</description>
    <label>Order Amount Of Closed Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>