force-app/main/default/objects/Order/fields/Order_Month__c.field-meta.xml
<CustomField>
    <fullName>Order_Month__c</fullName>
    <formula>TEXT(MONTH(Invoice_Date__c))&amp;&quot;/&quot;&amp;TEXT(YEAR(Invoice_Date__c))</formula>
    <label>Order Month</label>
    <type>Text</type>
</CustomField>