force-app/main/default/objects/Order/fields/Order_Origin__c.field-meta.xml
<CustomField>
    <fullName>Order_Origin__c</fullName>
    <label>Order Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2C Insujet PL</fullName>
            </value>
            <value>
                <fullName>B2C Insujet EU</fullName>
            </value>
            <value>
                <fullName>B2C Insujet FR</fullName>
            </value>
            <value>
                <fullName>B2C Solcotton FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>