force-app/main/default/objects/Order/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <label>Prazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>À vista</fullName>
            </value>
            <value>
                <fullName>50% Prepayment, 50% COD</fullName>
            </value>
            <value>
                <fullName>7d</fullName>
            </value>
            <value>
                <fullName>10d</fullName>
            </value>
            <value>
                <fullName>14d</fullName>
            </value>
            <value>
                <fullName>28d</fullName>
            </value>
            <value>
                <fullName>30d</fullName>
            </value>
            <value>
                <fullName>35d</fullName>
            </value>
            <value>
                <fullName>45d</fullName>
            </value>
            <value>
                <fullName>60d</fullName>
            </value>
            <value>
                <fullName>75d</fullName>
            </value>
            <value>
                <fullName>90d</fullName>
            </value>
            <value>
                <fullName>120d</fullName>
            </value>
            <value>
                <fullName>100% prepayment before production</fullName>
            </value>
            <value>
                <fullName>100% prepayment before shipment</fullName>
            </value>
            <value>
                <fullName>30% Prepayment, 70% COD</fullName>
            </value>
            <value>
                <fullName>50% Prepayment, 50% Net14-C</fullName>
            </value>
            <value>
                <fullName>30/40</fullName>
            </value>
            <value>
                <fullName>30/45</fullName>
            </value>
            <value>
                <fullName>30/45/60</fullName>
            </value>
            <value>
                <fullName>30/45/60/75</fullName>
            </value>
            <value>
                <fullName>30/60</fullName>
            </value>
            <value>
                <fullName>30/60/90</fullName>
            </value>
            <value>
                <fullName>45/60/90</fullName>
            </value>
            <value>
                <fullName>60/90</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>47</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>