force-app/main/default/objects/Order/fields/Product_Qty__c.field-meta.xml
<CustomField>
    <fullName>Product_Qty__c</fullName>
    <label>Product Qty</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>