force-app/main/default/objects/Order/fields/Quote_id__c.field-meta.xml
<CustomField>
    <fullName>Quote_id__c</fullName>
    <label>Quote_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>