force-app/main/default/objects/Order/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for Order in SAP</inlineHelpText>
    <label>SAP Code</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>