force-app/main/default/objects/Order/fields/Send_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Send_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to SAP</label>
    <type>Checkbox</type>
</CustomField>