force-app/main/default/objects/Order/fields/SendToSAP__c.field-meta.xml
<CustomField>
    <fullName>SendToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Strictly used by Community Partner to flag records to be used by automated process in order to activate Contract and Orders.
This is necessary due to the impossibility for Partners activate contract and orders by themselves.</description>
    <label>SendToSAP</label>
    <type>Checkbox</type>
</CustomField>