force-app/main/default/objects/Order/fields/serial__c.field-meta.xml
<CustomField>
    <fullName>serial__c</fullName>
    <description>Order Invoice Number</description>
    <externalId>true</externalId>
    <label>Serial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>