force-app/main/default/objects/Order/fields/Ship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ship_Amount__c</fullName>
    <description>Used to store freight amount from Ecommerce/Intelipost.</description>
    <label>Ship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>