force-app/main/default/objects/Order/fields/Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Code__c</fullName>
    <inlineHelpText>Shipping Address SAP name</inlineHelpText>
    <label>Ship To Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>