force-app/main/default/objects/Order/fields/ShopifyId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ShopifyId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>