force-app/main/default/objects/Order/fields/Status_Brazil__c.field-meta.xml
<CustomField>
    <fullName>Status_Brazil__c</fullName>
    <label>Status_Brazil</label>
    <length>34</length>
    <type>Text</type>
</CustomField>