force-app/main/default/objects/Order/fields/Tracking_url__c.field-meta.xml
<CustomField>
    <fullName>Tracking_url__c</fullName>
    <label>Tracking url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>