force-app/main/default/objects/Order/fields/U_TgtWMS_Envio__c.field-meta.xml
<CustomField>
    <fullName>U_TgtWMS_Envio__c</fullName>
    <description>Receives the picking status from SAP (Must be 1, 2, 3 or 4)</description>
    <externalId>true</externalId>
    <label>WMS Order Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>