force-app/main/default/objects/Order/fields/Year_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_Invoice_Date__c</fullName>
    <formula>YEAR(Invoice_Date__c)</formula>
    <label>Year Invoice Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>