force-app/main/default/objects/Order/recordTypes/APAC.recordType-meta.xml
<RecordType>
    <fullName>APAC</fullName>
    <active>true</active>
    <description>APAC Orders</description>
    <label>APAC</label>
</RecordType>