force-app/main/default/objects/Order/recordTypes/InsuJet.recordType-meta.xml
<RecordType>
    <fullName>InsuJet</fullName>
    <active>true</active>
    <label>InsuJet</label>
</RecordType>