force-app/main/default/objects/Order/recordTypes/Order_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Order_EMEA</fullName>
    <active>true</active>
    <label>EMEA</label>
</RecordType>