force-app/main/default/objects/Order/recordTypes/Order_NACA.recordType-meta.xml
<RecordType>
    <fullName>Order_NACA</fullName>
    <active>true</active>
    <description>Order for North America</description>
    <label>NACA</label>
</RecordType>