force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SAP_Code__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>Document_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>