force-app/main/default/objects/Order/listViews/BR_Tha_s_Oliveira.listView-meta.xml
<ListView>
    <fullName>BR_Tha_s_Oliveira</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Brazil</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.OWNERALIAS</field>
        <operation>equals</operation>
        <value>toliveir</value>
    </filters>
    <label>BR - Thaís Oliveira</label>
    <sharedTo>
        <group>Sales_Brazil</group>
    </sharedTo>
</ListView>